Added summary model

--- a/MyShopingOrder/Views/Home/Index.cshtml
+++ b/MyShopingOrder/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Agent Supply Order</h2>
 <div style="overflow-x: auto;">
-    <table class="table" style="border: 1px solid #ddd; border-collapse: collapse; border-spacing: 0; width: 100%">
+    <table class="table tablesorter" style="border: 1px solid #ddd; border-collapse: collapse; border-spacing: 0; width: 100%">
         <thead class="thead-default">
         <tr class="table-hover">
             <th>
@@ -25,43 +25,43 @@
         </tr>
         @foreach (var item in Model)
         {
-                <tr class="productItems">
-                    <td>
-                        <img src="@item.ImageUrl" alt="@item.ProductDescription" height="100">
+            <tr class="productItems">
+                <td>
+                    <img src="@item.ImageUrl" alt="@item.ProductDescription" height="100">
 
-                    </td>
-                    <td class="productId">
-                        @Html.DisplayFor(modelItem => item.ProductId)
+                </td>
+                <td class="productId">
+                    @Html.DisplayFor(modelItem => item.ProductId)
 
-                    </td>
-                    <td class="productDes">
-                        @Html.DisplayFor(modelItem => item.ProductDescription)
-                    </td>
+                </td>
+                <td class="productDes">
+                    @Html.DisplayFor(modelItem => item.ProductDescription)
+                </td>
 
-                    <td class="col-lg-1 col-md-2">
-                        <div class="input-group">
-                            <span class="input-group-btn">
+                <td class="col-lg-1 col-md-2">
+                    <div class="input-group">
+                        <span class="input-group-btn">
                                 <button type="button" class="btn btn-default btn-minus">
                                     <span class="glyphicon glyphicon-minus"></span>
                                 </button>
                             </span>
 
-                            @Html.TextBoxFor(modelItem => item.Units, new { @class = "form-control", type = "number", id = "itemUnits" })
-                            <span class="input-group-btn">
+                        @Html.TextBoxFor(modelItem => item.Units, new {@class = "form-control", type = "number", id = "itemUnits"})
+                        <span class="input-group-btn">
                                 <button type="button" class="btn btn-default btn-plus">
                                     <span class="glyphicon glyphicon-plus"></span>
                                 </button>
                             </span>
-                        </div>
-                    </td>
+                    </div>
+                </td>
 
-                    <td>
-                        <button type="submit" class="btn btn-primary btnAddorder" id="btnAddOrder">Add to Order List</button>
-                        @*<input type="button" value="Add to Order List" class="btn btn-primary btnAddorder" id="btnAddOrder">*@
-</td>
-                </tr>
-            }
-        
+                <td>
+                    <button type="submit" class="btn btn-primary btnAddorder" id="btnAddOrder">Add to Order List</button>
+                    @*<input type="button" value="Add to Order List" class="btn btn-primary btnAddorder" id="btnAddOrder">*@
+                </td>
+            </tr>
+        }
+
 
     </table>
 
@@ -69,6 +69,36 @@
         Place Order
     </button>
 </div>
+<!-- Modal -->
+<div class="modal fade" id="orderSummaryModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+            </div>
+            <div class="modal-body">
+                <table class="table table-striped" id="tblGrid">
+                    <thead id="tblHead">
+                        <tr>
+                            <th>Item Name</th>
+                            <th>Units</th>
+                        </tr>
+                    </thead>
+                    <tbody class="tablebody">
+                        
+                    </tbody>
+                </table> 
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary pull-right">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
 <link href="~/Content/sweetalert.css" rel="stylesheet" />
 <script src="~/scripts/sweetalert.min.js"></script>
 <script src="~/scripts/PLS/AgentSupplyOrder.js"></script>
+@*<script src="~/scripts/jquery.tablesorter.min.js"></script>*@
+<link href="~/sorter/style.css" rel="stylesheet" />
