Order details page

--- a/MyShopingOrder/Views/Home/Index.cshtml
+++ b/MyShopingOrder/Views/Home/Index.cshtml
@@ -5,7 +5,10 @@
 }
 
 <h2>Agent Supply Order</h2>
-<div style="overflow-x: auto;">
+
+<div id="orderHistory"></div>
+<button type="submit" class="btn btn-primary btnOrderHistory" id="btnOrderHistory">Check Order History</button>
+<div id="itemtable">
     <table class="table tablesorter" style="border: 1px solid #ddd; border-collapse: collapse; border-spacing: 0; width: 100%">
         <thead class="thead-default">
         <tr class="table-hover">
